<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="edu.tufts.cs.twocents.PostNewPollActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:theme="@style/AppBarOverlay"
        android:background="@color/navigationBarColor"
        android:id="@+id/relativeLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_poll_cancel_label"
            android:onClick="cancel"
            android:textColor="@color/colorAccent"
            android:background="#00000000"
            android:id="@+id/button"
            android:layout_weight="1.5"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_poll_label"
            android:textSize="24sp"
            android:layout_weight="2"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_poll_send_label"
            android:hint="@string/send_message_hint"
            android:onClick="send"
            android:background="#00000000"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <EditText
        android:hint="@string/new_poll_text_hint"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/poll_text"
        android:layout_below="@+id/relativeLayout"
        android:maxLines="8"
        android:maxLength="300"/>

</RelativeLayout>
